<resources>
    <string name="app_name" translatable="false">ScreenStream</string>
    <string name="error_title">Error</string>
    <string name="error_retry">Retry</string>
    <string name="error_exit">Exit</string>
    <string name="app_activity_collecting_logs">Collecting application logs…</string>
    <string name="app_activity_send_logs">Send logs to developer</string>
    <string name="app_activity_send_logs_dialog_title">Send logs in email to developer</string>
    <string name="app_activity_send_logs_dialog_message">Please add issue description:</string>
    <string name="app_activity_send_logs_dialog_neutral">Stop logging</string>
    <string name="app_update_activity_dialog_title">Update available</string>
    <string name="app_update_activity_dialog_message">An update has just been downloaded. Restart app now?</string>
    <string name="app_update_activity_dialog_restart">Restart</string>
    <string name="bottom_menu_stream">Stream</string>
    <string name="bottom_menu_settings">Settings</string>
    <string name="bottom_menu_start">Start</string>
    <string name="bottom_menu_stop">Stop</string>
    <string name="bottom_menu_about">About</string>
    <string name="bottom_menu_exit">Exit</string>
    <string name="stream_fragment_select_stream_mode">Select stream mode:</string>
    <string name="stream_fragment_mode_global">Global mode (WebRTC)</string>
    <string name="stream_fragment_mode_global_description">Global mode description</string>
    <string name="stream_fragment_mode_global_details">
- Powered by WebRTC technology.\n\n
- End-to-end encrypted communication.\n\n
- Stream protection with password.\n\n
- Can send video and audio.\n\n
- Connect using unique stream ID and password.\n\n
- Requires an internet connection for streaming.\n\n
- Individual data transmission for each client (more clients you have, more Internet bandwidth you need).
</string>
    <string name="stream_fragment_mode_local">Local mode (MJPEG)</string>
    <string name="stream_fragment_mode_local_description">Local mode description</string>
    <string name="stream_fragment_mode_local_details">
- Powered by MJPEG standard.\n\n
- Utilizes PIN for security (no encryption).\n\n
- Sends video as a series of independent images (no audio).\n\n
- Works without an internet connection within your local network.\n\n
- Embedded HTTP server.\n\n
- Works with WiFi and/or mobile networks, supporting IPv4 and IPv6.\n\n
- Clients connect via web browser using the app\'s provided IP address.\n\n
- Highly customizable.\n\n
- Individual data transmission for each client (more clients you have, more notwork bandwidth you need).
</string>
    <string name="stream_fragment_mode_global_get_new_id_description">Get new stream id</string>
    <string name="stream_fragment_mode_global_show_password_description">Show stream password</string>
    <string name="stream_fragment_mode_global_create_new_password_description">Create new stream password</string>
    <string name="stream_fragment_mode_global_server_address">Access stream at:\n%1$s</string>
    <string name="stream_fragment_mode_global_stream_id_getting">Getting Stream ID…</string>
    <string name="stream_fragment_mode_global_stream_id">Stream ID: %1$s</string>
    <string name="stream_fragment_mode_global_stream_password">Stream password: %1$s</string>
    <string name="stream_fragment_mode_global_mic_off">Mic off</string>
    <string name="stream_fragment_mode_global_mic_on">Mic on</string>
    <string name="stream_fragment_mode_global_audio_permission_title">Allow audio recording</string>
    <string name="stream_fragment_mode_global_audio_permission_message">Permission to record audio is necessary for the application to stream audio content.\n\nWithout granting this permission, the stream will be without audio.</string>
    <string name="stream_fragment_mode_global_audio_permission_message_settings">Granting microphone access in application permissions is necessary for the application to stream audio content.\n\nWithout granting this permission, the stream will be conducted without any audio.</string>
    <string name="stream_fragment_current_traffic">Traffic: %1$,.2f Mbit/s</string>
    <string name="stream_fragment_connected_clients">Connected clients: %1$d</string>
    <string name="stream_fragment_no_address">No address found</string>
    <string name="stream_fragment_interface">Interface: %1$s</string>
    <string name="stream_fragment_copied">Copied</string>
    <string name="stream_fragment_no_web_browser_found">No web browser found</string>
    <string name="stream_fragment_external_app_error">External application error</string>
    <string name="stream_fragment_share_address">Share device address</string>
    <string name="stream_fragment_pin">Pin: %1$s</string>
    <string name="stream_fragment_pin_disabled">Pin is disabled</string>
    <string name="stream_fragment_client_disconnected">Disconnected</string>
    <string name="stream_fragment_client_slow_network">Slow connection</string>
    <string name="stream_fragment_client_connected">Connected</string>
    <string name="stream_fragment_client_blocked">Blocked</string>
    <string name="item_device_address">Device address:</string>
    <string name="item_stream_address">Stream address:</string>
    <string name="item_device_address_description_open_address">Open address</string>
    <string name="item_device_address_description_copy_address">Copy address</string>
    <string name="item_device_address_description_share_address">Share address</string>
    <string name="item_device_address_description_qr_address">Show address as QR-code</string>
    <string name="permission_activity_error_title_activity_not_found">Permission dialog error</string>
    <string name="permission_activity_error_activity_not_found">Android bug. Don\'t check \"Don\'t show again\" at the rights request dialogue to capture the screen. If you already did so, reinstall the app.</string>
    <string name="permission_activity_permission_required_title">Permission required</string>
    <string name="permission_activity_cast_permission_required">ScreenStream application requires Screen Cast permission to capture screen.</string>
    <string name="permission_activity_error_title">Error</string>
    <string name="permission_activity_error_unknown">Unknown error</string>
    <string name="permission_activity_notifications_required_title">Notifications required</string>
    <string name="permission_activity_enable_notifications">Application require notifications to be enabled to start streaming service.\n\nPlease enable notifications in application settings.</string>
    <string name="permission_activity_allow_notifications">Application require permission to send notifications to be able to start streaming service.\n\nPlease allow sending notifications.</string>
    <string name="permission_activity_allow_notifications_settings">Application require permission to send notifications to be able to start streaming service.\n\nPlease allow sending notifications in application settings.</string>
    <string name="permission_activity_notification_settings">Open settings</string>
    <string name="notification_ready_to_stream">Ready to stream</string>
    <string name="notification_press_start">Press START to begin stream</string>
    <string name="notification_start">Start</string>
    <string name="notification_exit">Exit</string>
    <string name="notification_stream">Stream…</string>
    <string name="notification_press_stop">Press STOP to end stream</string>
    <string name="notification_stop">Stop</string>
    <string name="toast_slow_client_connection">Slow client connection detected</string>
    <string name="pref_settings_interface">Interface</string>
    <string name="pref_locale">Application language</string>
    <string name="pref_locale_summary">Open application language settings</string>
    <string name="pref_night_mode">Dark theme</string>
    <string-array name="pref_night_mode_options_api21_28">
        <item>Always</item>
        <item>Set by Battery Saver</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_night_mode_options_api29">
        <item>Always</item>
        <item>Automatically (follow system)</item>
        <item>Never</item>
    </string-array>
    <string name="pref_notification">Device notification settings</string>
    <string name="pref_notification_summary">Open system notification settings</string>
    <string name="pref_keep_awake">Keep device awake</string>
    <string name="pref_keep_awake_summary">Keep device and screen awake while streaming</string>
    <string name="pref_stop_on_sleep">Stop stream on sleep</string>
    <string name="pref_stop_on_sleep_summary">Stop stream if screen turns off</string>
    <string name="pref_start_on_boot">Start stream on boot</string>
    <string name="pref_start_on_boot_summary">Start stream after device boot</string>
    <string name="pref_auto_start_stop">Auto Start/Stop streaming</string>
    <string name="pref_auto_start_stop_summary">Auto Start/Stop streaming on clients connect/disconnect</string>
    <string name="pref_detect_slow_connections">Notify for slow connections</string>
    <string name="pref_detect_slow_connections_summary">Detect and notify for slow client connections</string>
    <string name="pref_html_buttons">Enable web page buttons</string>
    <string name="pref_html_buttons_summary">Show control buttons on web page</string>
    <string name="pref_html_show_press_start">Show \"Press START on device\"</string>
    <string name="pref_html_show_press_start_summary">Show \"Press START on device\" on web page</string>
    <string name="pref_html_back_color">Web page background color</string>
    <string name="pref_html_back_color_summary">Set web page background color</string>
    <string name="pref_html_back_color_title">Select background color</string>
    <string name="pref_settings_image">Image</string>
    <string name="pref_vr_mode">Virtual reality mode</string>
    <string name="pref_vr_mode_summary">Capture content from half screen</string>
    <string-array name="pref_vr_mode_options">
        <item>Use left part</item>
        <item>Use right part</item>
    </string-array>
    <string name="pref_crop">Crop image</string>
    <string name="pref_crop_summary">Crop image before sending to client</string>
    <string name="pref_crop_dialog_crop_top">Crop top:</string>
    <string name="pref_crop_dialog_crop_bottom">Crop bottom:</string>
    <string name="pref_crop_dialog_crop_left">Crop left:</string>
    <string name="pref_crop_dialog_crop_right">Crop right:</string>
    <string name="pref_crop_dialog_pixels">pixels</string>
    <string name="pref_crop_dialog_warning_message">Crop will be ignored if result is an empty image</string>
    <string name="pref_crop_dialog_error_message">Enter valid crop values</string>
    <string name="pref_grayscale">Grayscale mode</string>
    <string name="pref_grayscale_summary">Grayscale image before sending to client</string>
    <string name="pref_resize">Resize image</string>
    <string name="pref_resize_summary">Resize image before sending to client</string>
    <string name="pref_resize_value" translatable="false">%1$d%%</string>
    <string name="about_fragment_app_name" translatable="false">ScreenStream</string>
    <string name="about_fragment_app_version">Version: %1$s</string>
    <string name="about_fragment_developer_name">Developed by Dmytro Kryvoruchko</string>
    <string name="about_fragment_rate_app">Rate app</string>
    <string name="about_fragment_write_email">Write email to developer</string>
    <string name="about_fragment_app_sources">Application sources</string>
    <string name="about_fragment_privacy_policy">Privacy policy</string>
    <string name="about_fragment_license">License</string>
</resources>