<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/nav_streamFragment"
        android:enabled="true"
        android:icon="@drawable/ic_navigation_stream_24dp"
        android:title="@string/bottom_menu_stream"
        app:showAsAction="always" />
    <item
        android:id="@+id/nav_settingsFragment"
        android:enabled="true"
        android:icon="@drawable/ic_navigation_settings_24dp"
        android:title="@string/bottom_menu_settings"
        app:showAsAction="always" />
    <item
        android:id="@+id/menu_fab"
        android:enabled="false"
        android:title=""
        app:showAsAction="always" />
    <item
        android:id="@+id/nav_aboutFragment"
        android:enabled="true"
        android:icon="@drawable/ic_navigation_about_24dp"
        android:title="@string/bottom_menu_about"
        app:showAsAction="always" />
    <item
        android:id="@+id/nav_exitFragment"
        android:enabled="true"
        android:icon="@drawable/ic_navigation_exit_24dp"
        android:title="@string/bottom_menu_exit"
        app:showAsAction="always" />
</menu>