<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".ui.activity.AppActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/fragments_margin_bottom">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/iv_fragment_about"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8dp"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/about_image" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_fragment_about"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/about_fragment_app_name"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@color/textColorSecondary"
            app:layout_constraintTop_toBottomOf="@id/iv_fragment_about" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_fragment_about_version"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="8dp"
            android:textColor="@color/textColorSecondary"
            app:layout_constraintTop_toBottomOf="@id/tv_fragment_about"
            tools:text="@string/about_fragment_app_version" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_fragment_about_developer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="8dp"
            android:text="@string/about_fragment_developer_name"
            android:textColor="@color/textColorSecondary"
            app:layout_constraintTop_toBottomOf="@id/tv_fragment_about_version" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/b_fragment_about_rate"
            style="@style/Widget.MaterialComponents.Button.TextButton.Dialog.Icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:text="@string/about_fragment_rate_app"
            app:icon="@drawable/ic_about_rateapp_24dp"
            app:iconPadding="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_fragment_about_developer" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/b_fragment_about_developer_email"
            style="@style/Widget.MaterialComponents.Button.TextButton.Dialog.Icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:text="@string/about_fragment_write_email"
            app:icon="@drawable/ic_about_feedback_24dp"
            app:iconPadding="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/b_fragment_about_rate" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/b_fragment_about_sources"
            style="@style/Widget.MaterialComponents.Button.TextButton.Dialog.Icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:text="@string/about_fragment_app_sources"
            app:icon="@drawable/ic_about_sources_24dp"
            app:iconPadding="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/b_fragment_about_developer_email" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/b_fragment_privacy_policy"
            style="@style/Widget.MaterialComponents.Button.TextButton.Dialog.Icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:text="@string/about_fragment_privacy_policy"
            app:icon="@drawable/ic_about_policy_24dp"
            app:iconPadding="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/b_fragment_about_sources" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/b_fragment_license"
            style="@style/Widget.MaterialComponents.Button.TextButton.Dialog.Icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:text="@string/about_fragment_license"
            app:icon="@drawable/ic_about_license_24dp"
            app:iconPadding="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/b_fragment_privacy_policy" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>