<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="8dp"
    android:background="@color/colorBackgroundSecondary"
    android:paddingStart="16dp"
    android:paddingTop="8dp"
    android:paddingEnd="16dp"
    android:paddingBottom="8dp">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_item_device_address_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/item_device_address"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_item_device_address"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@color/colorAccent"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_item_device_address_header"
        tools:text="http://192.168.300.234:8080" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_item_device_address_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:maxLines="2"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="@color/textColorTertiary"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/iv_item_device_address_open_external"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_item_device_address"
        tools:text="Interface: radio0" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/iv_item_device_address_open_external"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:background="?android:selectableItemBackgroundBorderless"
        android:clickable="true"
        android:contentDescription="@string/item_device_address_description_open_address"
        android:focusable="true"
        android:padding="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/iv_item_device_address_copy"
        app:layout_constraintTop_toBottomOf="@id/tv_item_device_address"
        app:srcCompat="@drawable/ic_open_in_new_24dp" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/iv_item_device_address_copy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:background="?android:selectableItemBackgroundBorderless"
        android:clickable="true"
        android:contentDescription="@string/item_device_address_description_copy_address"
        android:focusable="true"
        android:padding="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/iv_item_device_address_share"
        app:layout_constraintTop_toBottomOf="@id/tv_item_device_address"
        app:srcCompat="@drawable/ic_copy_24dp" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/iv_item_device_address_share"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:background="?android:selectableItemBackgroundBorderless"
        android:clickable="true"
        android:contentDescription="@string/item_device_address_description_share_address"
        android:focusable="true"
        android:padding="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/iv_item_device_address_qr"
        app:layout_constraintTop_toBottomOf="@id/tv_item_device_address"
        app:srcCompat="@drawable/ic_share_24dp" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/iv_item_device_address_qr"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:background="?android:selectableItemBackgroundBorderless"
        android:clickable="true"
        android:contentDescription="@string/item_device_address_description_qr_address"
        android:focusable="true"
        android:padding="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_item_device_address"
        app:srcCompat="@drawable/ic_qrcode_24dp" />
</androidx.constraintlayout.widget.ConstraintLayout>