<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/ll_notification_start_big"
    android:layout_width="match_parent"
    android:layout_height="96dp"
    android:background="@color/colorNotificationBackground"
    android:gravity="center_vertical"
    android:orientation="vertical"
    android:paddingStart="8dp"
    android:paddingEnd="8dp"
    tools:viewBindingIgnore="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="4dp">

        <ImageView
            android:id="@+id/iv_notification_start_big_main"
            android:layout_width="48dp"
            android:layout_height="48dp"
            app:srcCompat="@drawable/logo" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLines="2"
                android:paddingStart="8dp"
                android:text="@string/notification_ready_to_stream"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/colorNotificationText"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLines="2"
                android:paddingStart="8dp"
                android:text="@string/notification_press_start"
                android:textColor="@color/colorNotificationText" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:baselineAligned="false"
        android:orientation="horizontal"
        android:paddingTop="4dp"
        android:paddingBottom="4dp">

        <LinearLayout
            android:id="@+id/ll_notification_start_big_start"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="?android:selectableItemBackground"
            android:clickable="true"
            android:focusable="true"
            android:gravity="center">

            <TextView
                android:id="@+id/tv_notification_start_big_start"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:drawableStart="@drawable/ic_notification_start_24dp"
                android:drawablePadding="8dp"
                android:gravity="center"
                android:paddingStart="8dp"
                android:paddingEnd="8dp"
                android:text="@string/notification_start"
                android:textAllCaps="true"
                android:textColor="@color/colorNotificationText"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:layout_marginTop="2dp"
            android:layout_marginBottom="2dp"
            android:background="@color/colorNotificationText" />

        <LinearLayout
            android:id="@+id/ll_notification_start_big_exit"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="?android:selectableItemBackground"
            android:clickable="true"
            android:focusable="true"
            android:gravity="center">

            <TextView
                android:id="@+id/tv_notification_start_big_exit"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:drawableStart="@drawable/ic_notification_exit_24dp"
                android:drawablePadding="8dp"
                android:gravity="center"
                android:paddingStart="8dp"
                android:paddingEnd="8dp"
                android:text="@string/notification_exit"
                android:textAllCaps="true"
                android:textColor="@color/colorNotificationText"
                android:textStyle="bold" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>